# meshcore-testbot

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  constants.js  spoorboekjeidb.js
frontend/src/components/: ContactsPanel.vue  LiveRoutesList.vue  SpoorboekjePanel.vue  VisorHeader.vue
frontend/src/composables/: useRelativeTime.js
frontend/src/utils/: routeFormat.js
src/: channel.rs  config.rs  contact_book.rs  framing.rs  geo_path.rs  main.rs  map_contacts.rs  mesh_raw.rs  packet_log.rs  protocol.rs  runtime.rs  transport.rs  visor.rs
