[package]
name = "meshcorebot"
version = "0.1.0"
edition = "2021"
description = "MeshCore companion bot over USB serial or TCP"

[dependencies]
anyhow = "1"
hex = "0.4"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
